Configure DaisyUI with custom light and dark themes

--- a/src/app/colors.scss
+++ b/src/app/colors.scss
@@ -1,7 +1,12 @@
 // Colori Globali
 
 $brand-primary: #e1882d;
+// oklch(55% 0.163 48.998)
 $brand-secondary: #fff700;
+// oklch(0.968 0.211 102.2)
 $brand-tertiary: #161616;
+// oklch(0.196 0 0)
 $brand-quaternary: #e8edf1;
+// oklch(0.927 0.005 231.3)
 $brand-quinary: #10b71b;
+// oklch(0.656 0.176 142.5)
