--- a/src/app/utilities.scss
+++ b/src/app/utilities.scss
@@ -13,6 +13,10 @@
   border: 1px solid black;
 }
 
+.altezza-test {
+  min-height: 900px;
+}
+
 .my-container {
   width: 100%;
   padding-right: 1rem;
