--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,25 +67,25 @@ button, a {
   default: false;
   prefersdark: true;
   color-scheme: "dark";
-  --color-base-100: oklch(25.33% 0.016 252.42);
-  --color-base-200: oklch(23.26% 0.014 253.1);
-  --color-base-300: oklch(21.15% 0.012 254.09);
-  --color-base-content: oklch(97.807% 0.029 256.847);
-  --color-primary: oklch(55% 0.163 48.998);
-  --color-primary-content: oklch(96% 0.018 272.314);
-  --color-secondary: oklch(0.968 0.211 102.2);
-  --color-secondary-content: oklch(44% 0.03 256.802);
-  --color-accent: oklch(64% 0.2 131.684);
-  --color-accent-content: oklch(98% 0.026 102.212);
-  --color-neutral: oklch(55% 0.027 264.364);
-  --color-neutral-content: oklch(92% 0.004 286.32);
-  --color-info: oklch(0.927 0.005 231.3);
-  --color-info-content: oklch(0.196 0 0);
-  --color-success: oklch(72% 0.219 149.579);
-  --color-success-content: oklch(26% 0.065 152.934);
+  --color-base-100: oklch(20.768% 0.039 265.754);
+  --color-base-200: oklch(19.314% 0.037 265.754);
+  --color-base-300: oklch(17.86% 0.034 265.754);
+  --color-base-content: oklch(84.153% 0.007 265.754);
+  --color-primary: oklch(75.351% 0.138 232.661);
+  --color-primary-content: oklch(15.07% 0.027 232.661);
+  --color-secondary: oklch(55% 0.046 257.417);
+  --color-secondary-content: oklch(13.602% 0.031 276.934);
+  --color-accent: oklch(54% 0.245 262.881);
+  --color-accent-content: oklch(14.472% 0.035 350.048);
+  --color-neutral: oklch(27.949% 0.036 260.03);
+  --color-neutral-content: oklch(85.589% 0.007 260.03);
+  --color-info: oklch(68.455% 0.148 237.251);
+  --color-info-content: oklch(0% 0 0);
+  --color-success: oklch(76% 0.233 130.85);
+  --color-success-content: oklch(27% 0.072 132.109);
   --color-warning: oklch(82% 0.189 84.429);
   --color-warning-content: oklch(41% 0.112 45.904);
-  --color-error: oklch(57% 0.245 27.325);
+  --color-error: oklch(63% 0.237 25.331);
   --color-error-content: oklch(25% 0.092 26.042);
   --radius-selector: 1rem;
   --radius-field: 0.5rem;
