--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@
     font-style: oblique;
   }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body{
   background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='29' height='50.115' patternTransform='scale(2) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 87%, 0.4)'/><path d='M14.499 11.82L4.36 5.968l.002-11.706 10.14-5.855L24.638-5.74l-.001 11.707zm0 50.06L4.36 56.029l.002-11.706 10.14-5.855 10.137 5.852-.001 11.707zm14.498-25.117L18.858 30.91l.002-11.707L29 13.349l10.137 5.853-.001 11.706zm-29 0l-10.139-5.852.002-11.707L0 13.349l10.138 5.853-.002 11.706zm14.501-19.905L0 8.488.002-8.257l14.5-8.374L29-8.26l-.002 16.745zm0 50.06L0 58.548l.002-16.745 14.5-8.373L29 41.8l-.002 16.744zM28.996 41.8l-14.498-8.37.002-16.744L29 8.312l14.498 8.37-.002 16.745zm-29 0l-14.498-8.37.002-16.744L0 8.312l14.498 8.37-.002 16.745z'  stroke-linecap='square' stroke-width='1' stroke='hsla(259, 0%, 100%, 0.7)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(-116,-98.46)' fill='url(%23a)'/></svg>");
   background-attachment: fixed;
@@ -40,7 +44,7 @@ button, a {
   --color-primary-content: oklch(98% 0.016 73.684);
   --color-secondary: oklch(76% 0.188 70.08);
   --color-secondary-content: oklch(97% 0.013 17.38);
-  --color-accent: oklch(64% 0.2 131.684);
+  --color-accent: oklch(54% 0.245 262.881);
   --color-accent-content: oklch(98% 0.031 120.757);
   --color-neutral: oklch(44% 0.03 256.802);
   --color-neutral-content: oklch(98% 0.002 247.839);
@@ -75,7 +79,7 @@ button, a {
   --color-primary-content: oklch(15.07% 0.027 232.661);
   --color-secondary: oklch(55% 0.046 257.417);
   --color-secondary-content: oklch(13.602% 0.031 276.934);
-  --color-accent: oklch(54% 0.245 262.881);
+  --color-accent: oklch(64% 0.2 131.684);
   --color-accent-content: oklch(14.472% 0.035 350.048);
   --color-neutral: oklch(27.949% 0.036 260.03);
   --color-neutral-content: oklch(85.589% 0.007 260.03);
