--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,4 +98,31 @@ button, a {
   --noise: 0;
 };
 
+.masonry-grid {
+  columns: 1;
+  column-gap: 1rem;
+  @media (min-width: 640px) {
+    columns: 2;
+  }
+  @media (min-width: 1200px) {
+    columns: 3;
+  }
+  @media (min-width: 1560px) {
+    columns: 4;
+  }
+  @media (min-width: 1850px) {
+    columns: 5;
+  }
+  @media (min-width: 2560px) {
+    columns: 6;
+  }
+  @media (min-width: 3840px) {
+    columns: 7;
+  }
+}
 
+.masonry-item {
+  break-inside: avoid;
+  margin-bottom: 1.5rem;
+  display: inline-block;
+}
